--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>GitHub Environment Remover</title>
+    <title>GitHub Deployment Remover</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
